--- a/Clients/WPFDemo/WPFDemo/MainWindow.xaml
+++ b/Clients/WPFDemo/WPFDemo/MainWindow.xaml
@@ -14,10 +14,10 @@
                   <RowDefinition Height="100" />
                   <RowDefinition Height="*" />
                </Grid.RowDefinitions>
-               <TextBox Grid.Column="0" Grid.Row="0" Height="23" HorizontalAlignment="Stretch" Margin="12,46,30,0" Name="txtBarcodeImageFile" VerticalAlignment="Top" Width="Auto" IsReadOnly="True" TextChanged="txtBarcodeImageFile_TextChanged" />
-               <Button Grid.Column="0" Grid.Row="0" Content="..." Height="23" HorizontalAlignment="Right" Margin="465,46,0,0" Name="btnSelectFile" VerticalAlignment="Top" Width="26" Click="btnSelectFile_Click" />
+               <TextBox Grid.Column="0" Grid.Row="0" Height="23" HorizontalAlignment="Stretch" Margin="12,46,30,0" Name="txtBarcodeImageFile" VerticalAlignment="Top" Width="Auto" IsReadOnly="True" TextChanged="TxtBarcodeImageFile_TextChanged" />
+               <Button Grid.Column="0" Grid.Row="0" Content="..." Height="23" HorizontalAlignment="Right" Margin="465,46,0,0" Name="btnSelectFile" VerticalAlignment="Top" Width="26" Click="BtnSelectFile_Click" />
                <Label Grid.Column="0" Grid.Row="0" Content="Barcode Image File" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1" VerticalAlignment="Top" Width="124" />
-               <Button Grid.Column="0" Grid.Row="0" Content="Decode" Height="23" HorizontalAlignment="Right" Margin="416,75,0,0" Name="btnDecode" VerticalAlignment="Top" Width="75" Click="btnDecode_Click" />
+               <Button Grid.Column="0" Grid.Row="0" Content="Decode" Height="23" HorizontalAlignment="Right" Margin="416,75,0,0" Name="btnDecode" VerticalAlignment="Top" Width="75" Click="BtnDecode_Click" />
                <Grid Grid.Column="0" Grid.Row="1" >
                   <Grid.ColumnDefinitions>
                      <ColumnDefinition Width="*" />
@@ -44,13 +44,16 @@
                <Grid.RowDefinitions>
                   <RowDefinition Height="*" />
                </Grid.RowDefinitions>
-               <Border BorderBrush="#202020" BorderThickness="1" CornerRadius="4">
-                  <Image Grid.Column="0" Grid.Row="0" Height="Auto" HorizontalAlignment="Stretch" Name="imageBarcodeEncoder" Stretch="Uniform" VerticalAlignment="Stretch" Width="Auto" />
-               </Border>
-               <Border BorderBrush="#202020" BorderThickness="1" CornerRadius="4">
-                     <Path Grid.Column="0" Grid.Row="0" Name="imageBarcodeEncoderGeometry" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="Black" Width="Auto" Height="Auto" />
-               </Border>
-               <Button Grid.Column="1" Grid.Row="0" Content="Encode" Height="23" HorizontalAlignment="Right" Margin="190,269,10,0" Name="btnEncode" VerticalAlignment="Top" Width="75" Click="btnEncode_Click" />
+               
+                <Image Grid.Column="0" Grid.Row="0" Margin="5"
+                       Height="Auto" HorizontalAlignment="Stretch" Name="imageBarcodeEncoder" 
+                       Stretch="Uniform" VerticalAlignment="Stretch" Width="Auto" />
+               
+                <Path Grid.Column="0" Grid.Row="0" Name="imageBarcodeEncoderGeometry" 
+                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="Black" 
+                      Width="Auto" Height="Auto" Stretch="Uniform" Margin="5"/>
+               
+                <Button Grid.Column="1" Grid.Row="0" Content="Encode" Height="23" HorizontalAlignment="Right" Margin="190,269,10,0" Name="btnEncode" VerticalAlignment="Top" Width="75" Click="BtnEncode_Click" />
                <Label Grid.Column="1" Grid.Row="0" Content="Barcode Type" Height="28" HorizontalAlignment="Right" Margin="0,6,180,0" Name="label4" VerticalAlignment="Top" Width="95" />
                <Label Grid.Column="1" Grid.Row="0" Content="Content" Height="28" HorizontalAlignment="Right" Margin="0,132,180,0" Name="label5" VerticalAlignment="Top" Width="95" />
                <TextBox Grid.Column="1" Grid.Row="0" Height="97" HorizontalAlignment="Right" Margin="0,166,10,0" Name="txtBarcodeContentEncode" VerticalAlignment="Top" Width="265"  />
