--- a/Clients/WPFDemo/WPFDemo/MainWindow.xaml
+++ b/Clients/WPFDemo/WPFDemo/MainWindow.xaml
@@ -1,67 +1,111 @@
 ﻿<Window x:Class="WPFDemo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="380" Width="531" ResizeMode="CanResize">
+        Title="MainWindow" Height="600" Width="800" ResizeMode="CanResize">
     <Grid>
 
-      <TabControl Height="Auto" Margin="0,1,0,0" Name="tabControl1" Width="Auto">
-         <TabItem Header="Decode" Name="tabItemDecode">
-            <Grid>
-               <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="*" />
-               </Grid.ColumnDefinitions>
-               <Grid.RowDefinitions>
-                  <RowDefinition Height="100" />
-                  <RowDefinition Height="*" />
-               </Grid.RowDefinitions>
-               <TextBox Grid.Column="0" Grid.Row="0" Height="23" HorizontalAlignment="Stretch" Margin="12,46,30,0" Name="txtBarcodeImageFile" VerticalAlignment="Top" Width="Auto" IsReadOnly="True" TextChanged="TxtBarcodeImageFile_TextChanged" />
-               <Button Grid.Column="0" Grid.Row="0" Content="..." Height="23" HorizontalAlignment="Right" Margin="465,46,0,0" Name="btnSelectFile" VerticalAlignment="Top" Width="26" Click="BtnSelectFile_Click" />
-               <Label Grid.Column="0" Grid.Row="0" Content="Barcode Image File" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1" VerticalAlignment="Top" Width="124" />
-               <Button Grid.Column="0" Grid.Row="0" Content="Decode" Height="23" HorizontalAlignment="Right" Margin="416,75,0,0" Name="btnDecode" VerticalAlignment="Top" Width="75" Click="BtnDecode_Click" />
-               <Grid Grid.Column="0" Grid.Row="1" >
-                  <Grid.ColumnDefinitions>
-                     <ColumnDefinition Width="*" />
-                     <ColumnDefinition Width="350" />
-                  </Grid.ColumnDefinitions>
-                  <Grid.RowDefinitions>
-                     <RowDefinition Height="*" />
-                  </Grid.RowDefinitions>
-                  <Image Grid.Column="0" Grid.Row="0" Height="Auto" HorizontalAlignment="Left" Margin="0,0,0,0" Name="imageBarcode" Stretch="None" VerticalAlignment="Top" Width="Auto" />
-                  <TextBox Grid.Column="1" Grid.Row="0" Height="23" HorizontalAlignment="Left" Margin="0,64,0,0" Name="txtBarcodeType" VerticalAlignment="Top" Width="265" IsReadOnly="True" />
-                  <Label Grid.Column="1" Grid.Row="0" Content="Barcode Type" Height="28" HorizontalAlignment="Left" Margin="0,30,0,0" Name="label2" VerticalAlignment="Top" Width="95" />
-                  <Label Grid.Column="1" Grid.Row="0" Content="Content" Height="28" HorizontalAlignment="Left" Margin="0,93,0,0" Name="label3" VerticalAlignment="Top" Width="95" />
-                  <TextBox Grid.Column="1" Grid.Row="0" Height="97" HorizontalAlignment="Left" Margin="0,127,0,0" Name="txtBarcodeContent" VerticalAlignment="Top" Width="265" IsReadOnly="True" />
-                  <Label Grid.Column="1" Grid.Row="0" Height="28" HorizontalAlignment="Left" Margin="0,0,0,0" Name="labDuration" VerticalAlignment="Top" Width="184" />
-               </Grid>
-            </Grid>
-         </TabItem>
-         <TabItem Header="Encode" Name="tabItemEncode">
-            <Grid>
-               <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="*" />
-                  <ColumnDefinition Width="290" />
-               </Grid.ColumnDefinitions>
-               <Grid.RowDefinitions>
-                  <RowDefinition Height="*" />
-               </Grid.RowDefinitions>
-               
-                <Image Grid.Column="0" Grid.Row="0" Margin="5"
-                       Height="Auto" HorizontalAlignment="Stretch" Name="imageBarcodeEncoder" 
-                       Stretch="Uniform" VerticalAlignment="Stretch" Width="Auto" />
-               
-                <Path Grid.Column="0" Grid.Row="0" Name="imageBarcodeEncoderGeometry" 
-                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="Black" 
-                      Width="Auto" Height="Auto" Stretch="Uniform" Margin="5"/>
-               
-                <Button Grid.Column="1" Grid.Row="0" Content="Encode" Height="23" HorizontalAlignment="Right" Margin="190,269,10,0" Name="btnEncode" VerticalAlignment="Top" Width="75" Click="BtnEncode_Click" />
-               <Label Grid.Column="1" Grid.Row="0" Content="Barcode Type" Height="28" HorizontalAlignment="Right" Margin="0,6,180,0" Name="label4" VerticalAlignment="Top" Width="95" />
-               <Label Grid.Column="1" Grid.Row="0" Content="Content" Height="28" HorizontalAlignment="Right" Margin="0,132,180,0" Name="label5" VerticalAlignment="Top" Width="95" />
-               <TextBox Grid.Column="1" Grid.Row="0" Height="97" HorizontalAlignment="Right" Margin="0,166,10,0" Name="txtBarcodeContentEncode" VerticalAlignment="Top" Width="265"  />
-               <ComboBox Grid.Column="1" Grid.Row="0" Height="23" HorizontalAlignment="Right" Margin="0,40,10,0" Name="cmbEncoderType" VerticalAlignment="Top" Width="265" />
-               <ComboBox Grid.Column="1" Grid.Row="0" Height="23" HorizontalAlignment="Right" Margin="0,103,10,0" Name="cmbRendererType" VerticalAlignment="Top" Width="265" />
-               <Label Grid.Column="1" Grid.Row="0" Content="Renderer Type" Height="28" HorizontalAlignment="Right" Margin="0,69,180,0" Name="label6" VerticalAlignment="Top" Width="95" />
-            </Grid>
-         </TabItem>
-      </TabControl>
-   </Grid>
+        <TabControl Height="Auto" Margin="0,1,0,0" Name="tabControl1" Width="Auto">
+            <TabItem Header="Decode" Name="tabItemDecode">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Label Grid.Column="0" Grid.Row="0" Content="Barcode Image File" Margin="5" />
+                    <Label Grid.Column="1" Grid.Row="0" Name="labDuration" />
+                    
+                    <TextBox Grid.ColumnSpan="2" Grid.Row="1" Margin="5" Name="txtBarcodeImageFile" IsReadOnly="True" 
+                             TextChanged="TxtBarcodeImageFile_TextChanged" />
+                    <Button Grid.Column="2" Grid.Row="1" Content="..." Margin="5" HorizontalAlignment="Right" Name="btnSelectFile" Width="26" 
+                            Click="BtnSelectFile_Click" />
+
+                    <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Content="Decode" Margin="5" HorizontalAlignment="Right"
+                            Name="btnDecode" Width="75" Click="BtnDecode_Click" />
+
+                    <Image Grid.Column="0" Grid.Row="4" Grid.RowSpan="4" HorizontalAlignment="Center" VerticalAlignment="Center"
+                           Name="imageBarcode" Stretch="None" />
+                    
+                    <Label Grid.Column="1" Grid.Row="4" Content="Barcode Type" HorizontalAlignment="Left" Margin="5,0" />
+                    <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="5,0" Name="txtBarcodeType" IsReadOnly="True" />
+                    
+                    <Label Grid.Column="1" Grid.Row="6" Content="Content" Margin="5,0" />
+                    <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="7" Margin="5,0" Name="txtBarcodeContent" IsReadOnly="True" 
+                             AcceptsReturn="True" TextWrapping="Wrap"/>
+                    
+                </Grid>
+            </TabItem>
+            <TabItem Header="Encode" Name="tabItemEncode">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="290" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Image Grid.RowSpan="12" Margin="5"
+                           Height="Auto" HorizontalAlignment="Stretch" Name="imageBarcodeEncoder" 
+                           Stretch="Uniform" VerticalAlignment="Stretch" Width="Auto" />
+
+                    <Path Grid.RowSpan="12" Name="imageBarcodeEncoderGeometry" 
+                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="Black" 
+                          Width="Auto" Height="Auto" Stretch="Uniform" Margin="5"/>
+
+                    <Label Grid.Column="1" Grid.Row="0" Content="Barcode Type" Margin="5,5,0,0" />
+                    <ComboBox Grid.Column="1" Grid.Row="1" Name="cmbEncoderType" Margin="5,0" />
+
+                    <Label Grid.Column="1" Grid.Row="2" Content="Renderer Type" Margin="5,5,0,0"/>
+                    <ComboBox Grid.Column="1" Grid.Row="3" Name="cmbRendererType" Margin="5,0"/>
+
+                    <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
+                        <Label Content="Margin" Margin="5,5,0,0" Width="150"/>
+                        <Label Content="Quiet zone" Margin="5,5,0,0" Width="120"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="1" Grid.Row="5" Orientation="Horizontal">
+                        <TextBox Name="txtMargin" Margin="5,0" Width="150"/>
+                        <TextBox Name="txtQuietZone" Margin="5,0" Width="120"/>
+                    </StackPanel>
+
+                    <Label Grid.Column="1" Grid.Row="6" Content="Mode" Margin="5,5,0,0"/>
+                    <ComboBox Grid.Column="1" Grid.Row="7" Name="cmbMode" Margin="5,0" DisplayMemberPath="Name"/>
+
+                    <Label Grid.Column="1" Grid.Row="8" Content="Erro" Margin="5,5,0,0"/>
+                    <ComboBox Grid.Column="1" Grid.Row="9" Name="cmbError" Margin="5,0"/>
+
+                    <Label Grid.Column="1" Grid.Row="10" Content="Content" Margin="5,5,0,0" Name="lblContent"/>
+                    <TextBox Grid.Column="1" Grid.Row="11" Name="txtBarcodeContentEncode" Margin="5,0" AcceptsReturn="True" 
+                             VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" TextWrapping="Wrap" />
+
+                    <Button Grid.Column="1" Grid.Row="12" Content="Encode" Height="23" HorizontalAlignment="Right" 
+                            Name="btnEncode" Width="75" Click="BtnEncode_Click" Margin="5"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+    </Grid>
 </Window>
